<resources>
    <string name="app_name">Coin Graph</string>
    <string name="buy">Buy</string>
    <string name="max">max</string>
    <string name="_1y">1y</string>
    <string name="_1m">1m</string>
    <string name="_1w">1w</string>
    <string name="_1d">1d</string>
    <string name="price_chart">Price Chart</string>
    <string name="_3m">3m</string>
    <string name="interval_1">1</string>
    <string name="interval_7">7</string>
    <string name="interval_30">30</string>
    <string name="interval_90">90</string>
    <string name="interval_365">365</string>
    <string name="interval_max">max</string>
    <string name="investments">Investments</string>
    <string name="coin_profile_id">coin_profile_id</string>
    <string name="video_2" />
    <string name="video_1" />
    <string name="not_supported_video" />
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="noo">no</string>
</resources>