<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_8"
    android:background="@drawable/ic_rectangle_gray_outline"
    android:backgroundTint="@color/white"
    android:paddingBottom="@dimen/dp_16"
    tools:context=".features.dashboard.post.fragment.PostFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/price_chart"
        android:textStyle="bold"
        android:textSize="@dimen/dp_24"
        android:textColor="@color/color_051d40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <RadioButton
            android:id="@+id/oneDay"
            android:layout_width="@dimen/dp_36"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@drawable/chart_radio_bg_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/_1d"
            android:textColor="@drawable/chart_radio_selector"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/oneWeek"
            android:layout_width="@dimen/dp_36"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/chart_radio_bg_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/_1w"
            android:textColor="@drawable/chart_radio_selector"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/oneMonth"
            android:layout_width="@dimen/dp_36"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/chart_radio_bg_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/_1m"
            android:textColor="@drawable/chart_radio_selector"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/threeMonth"
            android:layout_width="@dimen/dp_36"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/chart_radio_bg_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/_3m"
            android:textColor="@drawable/chart_radio_selector"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/oneYear"
            android:layout_width="@dimen/dp_36"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/chart_radio_bg_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/_1y"
            android:textColor="@drawable/chart_radio_selector"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/max"
            android:layout_width="@dimen/dp_45"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/chart_radio_bg_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/max"
            android:textColor="@drawable/chart_radio_selector"
            android:textSize="@dimen/sp_10" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/coinTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="BTC Price Today"
        android:textSize="@dimen/dp_12"
        android:textColor="@color/color_051d40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinTitle" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_minus_40"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/lineChart" />

    <View
        android:id="@+id/viewSemiCircular1"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:visibility="gone"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="@id/oneDayLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/oneDayLabel" />

    <View
        android:id="@+id/viewSemiCircular2"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:visibility="gone"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="@id/oneDayChange"
        app:layout_constraintEnd_toEndOf="@id/viewSemiCircular1"
        app:layout_constraintStart_toStartOf="@id/viewSemiCircular1"
        app:layout_constraintTop_toBottomOf="@id/viewSemiCircular1" />

    <View
        android:id="@+id/viewLine1"
        android:layout_width="@dimen/dp_2"
        android:layout_height="@dimen/dp_0"
        android:background="@color/color_E9E9EE"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/viewSemiCircular2"
        app:layout_constraintStart_toStartOf="@id/oneWeekLabel"
        app:layout_constraintTop_toTopOf="@id/viewSemiCircular1" />

    <View
        android:id="@+id/viewLine2"
        android:layout_width="@dimen/dp_2"
        android:layout_height="@dimen/dp_0"
        android:visibility="gone"
        android:background="@color/color_E9E9EE"
        app:layout_constraintBottom_toBottomOf="@id/viewSemiCircular2"
        app:layout_constraintStart_toStartOf="@id/oneMonthLabel"
        app:layout_constraintTop_toTopOf="@id/viewSemiCircular1" />

    <View
        android:id="@+id/viewLine4"
        android:layout_width="@dimen/dp_2"
        android:layout_height="@dimen/dp_0"
        android:visibility="gone"
        android:background="@color/color_E9E9EE"
        app:layout_constraintBottom_toBottomOf="@id/viewSemiCircular2"
        app:layout_constraintStart_toStartOf="@id/oneYearLabel"
        app:layout_constraintTop_toTopOf="@id/viewSemiCircular1" />

    <View
        android:id="@+id/viewLine5"
        android:layout_width="@dimen/dp_2"
        android:layout_height="@dimen/dp_0"
        android:visibility="gone"
        android:background="@color/color_E9E9EE"
        app:layout_constraintBottom_toBottomOf="@id/viewSemiCircular2"
        app:layout_constraintStart_toStartOf="@id/maxLabel"
        app:layout_constraintTop_toTopOf="@id/viewSemiCircular1" />

    <TextView
        android:id="@+id/oneDayLabel"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/_1d"
        android:visibility="gone"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toStartOf="@+id/oneWeekLabel"
        app:layout_constraintStart_toStartOf="@id/viewSemiCircular1"
        app:layout_constraintTop_toBottomOf="@+id/barChart" />

    <TextView
        android:id="@+id/oneWeekLabel"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/_1w"
        android:visibility="gone"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toStartOf="@+id/oneMonthLabel"
        app:layout_constraintStart_toEndOf="@+id/oneDayLabel"
        app:layout_constraintTop_toBottomOf="@+id/barChart" />

    <TextView
        android:id="@+id/oneMonthLabel"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/_1m"
        android:visibility="gone"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toStartOf="@+id/oneYearLabel"
        app:layout_constraintStart_toEndOf="@+id/oneWeekLabel"
        app:layout_constraintTop_toBottomOf="@+id/barChart" />

    <TextView
        android:id="@+id/oneYearLabel"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/_1y"
        android:visibility="gone"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toStartOf="@+id/maxLabel"
        app:layout_constraintStart_toEndOf="@+id/oneMonthLabel"
        app:layout_constraintTop_toBottomOf="@+id/barChart" />

    <TextView
        android:id="@+id/maxLabel"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/max"
        android:visibility="gone"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="@id/viewSemiCircular1"
        app:layout_constraintStart_toEndOf="@+id/oneYearLabel"
        app:layout_constraintTop_toBottomOf="@+id/barChart" />

    <TextView
        android:id="@+id/oneDayChange"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:visibility="gone"
        android:textColor="@color/color_01ba61"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="@id/oneDayLabel"
        app:layout_constraintStart_toStartOf="@+id/oneDayLabel"
        app:layout_constraintTop_toTopOf="@+id/viewSemiCircular2"
        tools:text="3.474567876545678765678765%" />

    <TextView
        android:id="@+id/oneWeekChange"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:visibility="gone"
        android:textColor="@color/color_01ba61"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="@+id/oneWeekLabel"
        app:layout_constraintStart_toStartOf="@+id/oneWeekLabel"
        app:layout_constraintTop_toBottomOf="@+id/oneWeekLabel"
        tools:text="-8.44%" />

    <TextView
        android:id="@+id/oneMonthChange"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:visibility="gone"
        android:textColor="@color/color_01ba61"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="@+id/oneMonthLabel"
        app:layout_constraintStart_toStartOf="@+id/oneMonthLabel"
        app:layout_constraintTop_toBottomOf="@+id/oneMonthLabel"
        tools:text="-24.31%" />

    <TextView
        android:id="@+id/oneYearChange"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:visibility="gone"
        android:textColor="@color/color_01ba61"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="@+id/oneYearLabel"
        app:layout_constraintStart_toStartOf="@+id/oneYearLabel"
        app:layout_constraintTop_toBottomOf="@+id/oneYearLabel"
        tools:text="629.41%" />

    <TextView
        android:id="@+id/maxChange"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:visibility="gone"
        android:textColor="@color/color_01ba61"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="@+id/maxLabel"
        app:layout_constraintStart_toStartOf="@id/maxLabel"
        app:layout_constraintTop_toBottomOf="@+id/maxLabel"
        tools:text="60%" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!--    <ProgressBar-->
<!--        android:id="@+id/progressBar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:visibility="gone"-->
<!--        android:theme="@style/ProgressBarTheme" />-->

</FrameLayout>